# stars-carla-ros-mapper

./: Dockerfile  LICENSE  README.md  entrypoint.sh  requirements.txt
CarlaStarsRosMapper/ros2_ws/src/: package.xml  setup.cfg  setup.py
CarlaStarsRosMapper/ros2_ws/src/carla_stars_ros_mapper/: main.py
CarlaStarsRosMapper/ros2_ws/src/carla_stars_ros_mapper/nodes/: async_service_client.py
CarlaStarsRosMapper/ros2_ws/src/carla_stars_ros_mapper/nodes/carla_implementations/: carla_actor_state_forwarder.py  carla_dynamic_info_client.py  carla_dynamic_info_forwarder.py  carla_general_info_forwarder.py  carla_stars_static_map_data_forwarder.py  carla_stars_static_map_forwarder.py  carla_waypoint_client.py  carla_waypoint_client_forwarder.py
