<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_stars_ros_mapper</name>
  <version>1.0.0</version>
  <description>Bridge to read Carla ROS topics and write them to STARS compatible topics</description>
  <maintainer email="valentin.rusche@udo.edu">Valentin Rusche</maintainer>
  <license>AGPL-3.0-or-later</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rosbag2_py</depend>
  <depend>carla_msgs</depend>
  <depend>carla_waypoint_types</depend>
  <depend>carla_actor_state_types</depend>
  <depend>stars_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
